# PBFgroup_cpp_task

./: CMakeLists.txt  Makefile  README.md
client/: CMakeLists.txt  Makefile  app.hpp  client  client.hpp  client_dto.hpp
client/src/: app.cpp  client.cpp  main.cpp
common/: CMakeLists.txt  Makefile  logger.hpp  signal_catcher.hpp
common/src/: logger.cpp  signal_catcher.cpp
server/: CMakeLists.txt  Makefile  log.txt  server  server.hpp
server/src/: main.cpp  server.cpp
